[tool.poetry]
name = "certbot-v2"
version = "0.4.6"
description = "ClouDNS DNS Authenticator plugin for Certbot"
authors = ["Simon Marti <simon.marti@inventage.com>"]
license = "Unlicense"
repository = "https://github.com/Venkoul99/certbot-dns-cloudns"
readme = "README.rst"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: The Unlicense (Unlicense)',
    'Intended Audience :: System Administrators',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Security',
    'Topic :: System :: Installation/Setup',
    'Topic :: System :: Networking',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
    'Environment :: Plugins',
    'Operating System :: OS Independent',
]

packages = [
    { include = "certbot-v2" }
]

[tool.poetry.dependencies]
python = "^3.7"
certbot = "^2.1.0"
acme = "^2.1.0"
cloudns-api = "^0.9.3"
dnspython = "^2.1.0"
"zope.interface" = "^5.1.0"

[tool.poetry.plugins."certbot.plugins"]
dns-cloudns = "certbot_dns_cloudns._internal.authenticator:Authenticator"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
